Bug 1506998 - DC's environment tab not showing image secrets properly

--- a/app/styles/_kve.less
+++ b/app/styles/_kve.less
@@ -156,6 +156,9 @@
         float: left;
         width: 100%;
       }
+      .has-warning {
+        display: inline-block;
+      }
     }
     .environment-from-view-details {
       float: left;
